option java_package = "com.baidu.im.frame.pb";
option optimize_for = LITE_RUNTIME;
message UnRegAppReq
{
    optional string channelKey = 1;
};

message UnRegAppRsp
{
};


